web-infras/parser/tests/fixtures/babel/es2015/class/invalid-escape-set/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,20)
1|class X { se\u0074 x(value) {} }
 |                  ^
